[B][I]Version 4.2.0[/I][/B]
- [NEW] Jarvis compatibility
- [NEW] Kodi File Cleaner is now known as Janitor
- [NEW] Manual cleaning now features a progress dialog that can be used to interrupt cleaning
- [FIX] Kodi library was not being cleaned after Janitor finished cleaning

[B][I]Version 4.1.0[/I][/B]
- [NEW] Helix compatibility
- [NEW] Show information dialogs when errors occur
- [NEW] Change name to Kodi File Cleaner
- [NEW] Kodi library cleaning occurs silently
- [NEW] Allow users to reset excluded paths by pressing a button
- [FIX] Fall back to copy and delete in case of permission problems
- [FIX] Log file was not being created automatically

[B][I]Version 4.0.1[/I][/B]
- [NEW] Specify whether to clean up or view log on manual run
- [FIX] A memory leak could occur when the user enabled deleting empty folders
- [FIX] Disabling the addon froze XBMC completely
- [FIX] Video library was not being cleaned up afterwards

[B][I]Version 4.0.0[/I][/B]
- [NEW] Gotham compatibility
- [NEW] Start addon manually
- [NEW] Allow disabling the service
- [NEW] Log file viewer (accessible from settings)
- [NEW] Support for stacked movies (does not include DVD folder structures, e.g. VIDEO_TS)
- [NEW] Polish translation (thanks struart)

- [FIX] Subtitles with language codes were not cleaned
- [FIX] Changed localizations to use the new PO structure
- [FIX] Increased the maximum allowed scan interval
- [FIX] Videos are now moved by default instead of deleted, to prevent loss of data
- [FIX] Improved support for unicode filenames

[B][I]Version 3.2.1[/I][/B]
- [FIX] Related files were not being cleaned

[B][I]Version 3.2.0[/I][/B]
- [NEW] Clean related files with similar names (e.g. subtitles) (thanks WoLpH)

[B][I]Version 3.1.0[/I][/B]
- [NEW] Exclude up to three file paths from being cleaned

[B][I]Version 3.0.2[/I][/B]
- [FIX] Filenames with non-ASCII characters were not being cleaned

[B][I]Version 3.0.1[/I][/B]
- [FIX] Setting a different locale broke the addon
