@@ -2,8 +2,6 @@
 # -*- coding: utf-8 -*-
 
 import json
-
-import xbmcvfs
 from utils import *
 
 
@@ -301,12 +299,18 @@ class Cleaner(object):
         by_minimum_rating = {"field": "rating", "operator": "lessthan", "value": "{0:f}".format(get_setting(minimum_rating))}
         by_no_rating = {"field": "rating", "operator": "isnot", "value": "0"}
         by_progress = {"field": "inprogress", "operator": "false", "value": ""}
+        by_exclusion1 = {"field": "path", "operator": "doesnotcontain", "value": get_setting(exclusion1)}
+        by_exclusion2 = {"field": "path", "operator": "doesnotcontain", "value": get_setting(exclusion2)}
+        by_exclusion3 = {"field": "path", "operator": "doesnotcontain", "value": get_setting(exclusion3)}
 
         # link settings and filters together
         settings_and_filters = [
             (get_setting(enable_expiration), by_date_played),
             (get_setting(clean_when_low_rated), by_minimum_rating),
-            (get_setting(not_in_progress), by_progress)
+            (get_setting(not_in_progress), by_progress),
+            (get_setting(exclusion_enabled) and get_setting(exclusion1) is not "", by_exclusion1),
+            (get_setting(exclusion_enabled) and get_setting(exclusion2) is not "", by_exclusion2),
+            (get_setting(exclusion_enabled) and get_setting(exclusion3) is not "", by_exclusion3)
         ]
 
         # Only check not rated videos if checking for video ratings at all
@@ -355,11 +359,6 @@ class Cleaner(object):
             debug("Found {0:d} watched {1} matching your conditions".format(response["limits"]["total"], option))
             debug("JSON Response: " + str(response))
             for video in response[option]:
-                # Test for file exclusions
-                if self.is_excluded(video["file"]):
-                    debug("{0!r} matches an exclusion, not including it in the list of expired videos".format(video))
-                    continue
-
                 # Gather all properties and add it to this video's information
                 temp = []
                 for p in self.properties[option]:
@@ -375,68 +374,6 @@ class Cleaner(object):
         finally:
             debug("Expired videos: {0}".format(expired_videos))
             return expired_videos
-
-    def is_excluded(self, full_path):
-        """Check if the file path is part of the excluded sources.
-
-        :type full_path: str
-        :param full_path: the path to the file that should be checked for exclusion
-        :rtype: bool
-        :return: True if the path matches a user-set excluded path, False otherwise.
-        """
-        if not get_setting(exclusion_enabled):
-            debug("Path exclusion is disabled.")
-            return False
-        elif not full_path:
-            debug("File path is empty and cannot be checked for exclusions")
-            return False
-
-        exclusions = map(get_setting, [exclusion1, exclusion2, exclusion3])
-
-        if r"://" in full_path:
-            debug("Detected a network path")
-            pattern = re.compile("(?:smb|nfs)://(?:(?:.+):(?:.+)@)?(?P<tail>.*)$", flags=re.U | re.I)
-
-            debug("Converting excluded network paths for easier comparison")
-            normalized_exclusions = []
-            for ex in exclusions:
-                # Strip everything but the folder structure
-                try:
-                    if ex and r"://" in ex:
-                        # Only normalize non-empty excluded paths
-                        normalized_exclusions.append(pattern.match(ex).group("tail").lower())
-                except (AttributeError, IndexError, KeyError) as err:
-                    debug("Could not parse the excluded network path {0!r}\n{1}".format(ex, err), xbmc.LOGWARNING)
-                    return True
-
-            debug("Conversion result: {0!r}".format(normalized_exclusions))
-
-            debug("Proceeding to match a file with the exclusion paths")
-            debug("The file to match is {0!r}".format(full_path))
-            result = pattern.match(full_path)
-
-            try:
-                debug("Converting file path for easier comparison.")
-                converted_path = result.group("tail").lower()
-                debug("Result: {0!r}".format(converted_path))
-                for ex in normalized_exclusions:
-                    debug("Checking against exclusion {0!r}.".format(ex))
-                    if converted_path.startswith(ex):
-                        debug("File {0!r} matches excluded path {1!r}.".format(converted_path, ex))
-                        return True
-
-            except (AttributeError, IndexError, KeyError) as err:
-                debug("Error converting {0!r}. No files will be deleted.\n{1}".format(full_path, err), xbmc.LOGWARNING)
-                return True
-        else:
-            debug("Detected a local path")
-            for ex in exclusions:
-                if ex and full_path.startswith(ex):
-                    debug("File {0!r} matches excluded path {1!r}.".format(full_path, ex))
-                    return True
-
-        debug("No match was found with an excluded path.")
-        return False
 
     def unstack(self, path):
         """Unstack path if it is a stacked movie. See http://kodi.wiki/view/File_stacking for more info.
@@ -489,10 +426,6 @@ class Cleaner(object):
 
         paths = self.unstack(location)
         success = []
-
-        if self.is_excluded(paths[0]):
-            debug("Detected a file on an excluded path. Aborting.")
-            return False
 
         for p in paths:
             if xbmcvfs.exists(p):
@@ -628,13 +561,8 @@ class Cleaner(object):
             source = source.encode("utf-8")
 
         paths = self.unstack(source)
-        success = []
         files_moved_successfully = 0
         dest_folder = xbmc.makeLegalFilename(dest_folder)
-
-        if self.is_excluded(paths[0]):
-            debug("Detected a file on an excluded path. Aborting.")
-            return 0
 
         for p in paths:
             debug("Attempting to move {0!r} to {1!r}.".format(p, dest_folder))
